更改账户标题

--- a/keepLive/src/main/res/values/strings.xml
+++ b/keepLive/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">onepx</string>
-    <string name="title">测试账号同步</string>
+    <string name="app_name">保活方案</string>
+    <string name="title">测试账号同步拉活说明</string>
 </resources>
